--- a/OutputConsole/OutputConsole.csproj
+++ b/OutputConsole/OutputConsole.csproj
@@ -16,6 +16,14 @@
     <PackageReleaseNotes>See git for list of changes.</PackageReleaseNotes>
     <RootNamespace />
     <Version>2.0.0</Version>
+    <PublishRepositoryUrl>true</PublishRepositoryUrl>
+    <IncludeSymbols>true</IncludeSymbols>
+    <SymbolPackageFormat>snupkg</SymbolPackageFormat>
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
+  </ItemGroup>
+
 
 </Project>
